2008-02-11  Vincent Untz  <vuntz@gnome.org>

	* panel-menu-items.c: (panel_menu_item_mount_volume): update for API
	change in gio

2008-02-11  Vincent Untz  <vuntz@gnome.org>

	* panel-util.c: (panel_util_get_icon_for_uri): remove workaround for
	application/x-gnome-saved-search places. We don't need the
	fast-content-type anymore. Maybe this was needed before because of a
	bug in gio?

2008-02-11  Vincent Untz  <vuntz@gnome.org>

	* panel-util.c: (panel_util_get_file_description): new, to get the
	description of a GFile
	(panel_util_get_label_for_uri): rework to use the description of the
	GFile when available

2008-02-11  Vincent Untz  <vuntz@gnome.org>

	* panel-menu-items.c: (panel_place_menu_item_append_local_gio),
	(panel_place_menu_item_append_remote_gio): use g_file_is_native()
	instead of looking at the URI scheme

2008-02-11  Vincent Untz  <vuntz@gnome.org>

	* panel.c: (drop_uri): finish gio port

2008-02-10  Vincent Untz  <vuntz@gnome.org>

	* panel-menu-items.c: (panel_place_menu_item_append_local_gio): add
	back a string that was removed and will be used again soon. Right now,
	it's just sitting there, useless. But it's temporary :-)

2008-02-10  Vincent Untz  <vuntz@gnome.org>

	* panel-menu-items.c: (panel_place_menu_item_append_volumes): renamed
	to...
	(panel_place_menu_item_append_local_gio): this. Also add mounts that
	have no volume and that have a root with a file: scheme
	(panel_place_menu_item_append_mounts): renamed to...
	(panel_place_menu_item_append_remote_gio): this. Only add mounts that
	have not a root with a file: scheme
	(panel_place_menu_item_create_menu): updated

2008-02-10  Vincent Untz  <vuntz@gnome.org>

	* panel-menu-items.c: (panel_menu_items_append_from_desktop): fix
	compilation
	(panel_place_menu_item_drives_changed): new
	(panel_place_menu_item_volumes_changed): new
	(panel_place_menu_item_finalize): disconnect new signal handlers
	(panel_place_menu_item_init): connect to the drive-* and volume-*
	signals too
