@@ -1,5 +1,10 @@
 2008-02-11  Vincent Untz  <vuntz@gnome.org>
 
+	* panel-menu-items.c: (panel_place_menu_item_append_local_gio): put
+	items in a submenu if there are too many items. Fix a regression.
+
+2008-02-11  Vincent Untz  <vuntz@gnome.org>
+
 	* panel-menu-items.c: (panel_menu_item_mount_volume): update for API
 	change in gio
 
